adapt to jdk prior 1.4, Boolean.valueOf is not supported
git-svn-id: https://svn.exedio.com/cope/trunk/persistence@227 e7d4fc99-c606-0410-b9bf-843393a9eab7